--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "maath": "^0.10.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.0",
     "react-simple-typewriter": "^5.0.1",
