--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.180.0"
